# mypaint

./: .appveyor.yml  .drone.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .hound.yml  .travis.yml  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.cursors  Changelog.md  DEBUGGING.md  ISSUE_TEMPLATE.md  LICENSE  Licenses.dep5  Licenses.md  Makefile  Makefile.am  PLAN  PT1.txt  README  README.gegl  README.gtk3  README.md  README.scratchpad  README_LINUX.md  README_OSX.md  README_WINDOWS.md  SConscript  SConstruct  ansidecl.h  application.py  autogen.sh  brush.c  brush.h  brush.hpp  brush.py  brush_dab.c  (+94 more)
appimage/: README.md  appimage.sh
backgrounds/: README
brushes/: 100%_Opaque.myb  2B_pencil.myb  4B_pencil.myb  Airbrush.myb  B-pencil.myb  Beamlight_01.myb  Blur.myb  Blur_Fast.myb  Blur_ramon.myb  Brush_blur.myb  Caligraph.myb  Charcoal.myb  Charcoal_ramon.myb  Classic_Paint.myb  Clouds.myb  Clouds_2.myb  Delayed_.myb  Delayed_Line.myb  Dust.myb  Fine_Pen.myb  Glazing.myb  Glow.myb  Glow_ramon.myb  Grain.myb  Grass_1.myb  Grass_2.myb  Grass_3.myb  Grass_P.myb  HB-pencil.myb  Hair2.myb  Hair_.myb  HardSoft.myb  Hard_Eraser.myb  Ico_Alias_Brush.myb  Ico_Basic_Round.myb  Ico_Bubble_Blender.myb  Ico_Bubble_Brush.myb  Ico_Chaotic_Smudge.myb  Ico_Color_Smudge_+.myb  Ico_Crazy_Line.myb  (+352 more)
brushlib/: COPYING  PERFORMANCE  README  SConscript  TODO  brush.hpp  brushlib.hpp  brushmodes.c  brushmodes.h  brushsettings-gen.h  brushsettings.json  brushsettings.py  fifo.c  fifo.h  generate.py  helpers.c  helpers.h  helpers.hpp  libmypaint.c  mapping.c  mapping.h  mapping.hpp  mypaint-brush-settings-gen.h  mypaint-brush-settings.c  mypaint-brush-settings.h  mypaint-brush.c  mypaint-brush.h  mypaint-config.h  mypaint-config.h.in  mypaint-fixed-tiled-surface.c  mypaint-fixed-tiled-surface.h  mypaint-glib-compat.h  mypaint-rectangle.c  mypaint-rectangle.h  mypaint-surface.c  mypaint-surface.h  mypaint-tiled-surface.c  mypaint-tiled-surface.h  mypaint.c  mypaint.h  (+13 more)
data/: meson.build
data/backgrounds/mrmamurk/: MrMamurk_readme.txt
data/palettes/: All_color_choice.gpl  Browns_And_Yellows.gpl  Classic_4.gpl  Cool_Colors.gpl  Creative_Commons.gpl  Greys16.gpl  Pastels.gpl  Reds_And_Purples.gpl  Ubuntu.gpl  Visibone.gpl  Visibone_2.gpl  Watercolor.gpl
data/po/: af.po  bg.po  bn.po  ca.po  ca@valencia.po  ckb.po  dz.po  el.po  en_GB.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hy.po  ka.po  kk.po  kn.po  ko.po  lv.po  mai.po  meson.build  ml.po  mn.po  ms.po  mypaint.pot  nb.po  nl.po  oc.po  ro.po  ru.po  se.po  si.po  sl.po  (+14 more)
data/svg/: symbolic-icons-extract.py
data/svg/tango/: brush-blend-modes.svgz  mypaint-brush-blend-mode-colorize.svgz  mypaint-brush-mods-active.svgz  mypaint-frame.svgz  mypaint-line-mode-ellipse.svgz  mypaint-line-mode-sequence.svgz  mypaint-line-mode-straight.svgz  mypaint-tool-color-rgb.svgz  mypaint-tool-flood-fill.svgz  mypaint-tool-layers.svgz  mypaint-tool-move-layer.svgz  mypaint-tool-paint-color.svgz  mypaint-tool-preview-window.svgz  mypaint-view-100.svgz  mypaint-view-mirror-horizontal.svgz  mypaint-view-mirror-vertical.svgz  mypaint-view-pan.svgz  mypaint-view-rotate-anticlockwise.svgz  mypaint-view-zoom.svgz  mypaint-view.svgz
desktop/: Makefile.am  mypaint-ora-thumbnailer  mypaint-ora-thumbnailer.py  mypaint-ora.thumbnailer  mypaint.appdata.xml  mypaint.desktop  openraster-thumbnailer.py  openraster-thumbnailer.schemas.tmpl  openraster_thumbnailer.py
doc/: PERFORMANCE  brush_observers.odg  mypaint_modules_complex.odg  (+1 more)
src/: config.py.in  meson.build  mypaint-ora-thumbnailer.py.in  mypaint.py  mypaint.py.in  setup.cfg
src/backgrounds/: README.md
src/desktop/: mypaint-ora-thumbnailer.py  mypaint.appdata.xml
src/gui/: __init__.py  accelmap.py  application.py  autorecover.py  backgroundwindow.py  blendmodehandler.py  brusheditor.glade  brusheditor.py  brushiconeditor.py  brushmanip.py  brushmodifier.py  brushselectionwindow.py  builderhacks.py  buttonmap.py  colorpicker.py  colorpreview.py  compatconfig.py  compatibility.py  cursor.py  curve.py  device.py  dialogs.py  document.py  drawutils.py  drawwindow.py  externalapp.py  factoryaction.py  filehandling.py  fill.py  footer.py  framewindow.py  freehand.py  history.py  historypopup.py  inktool.py  inputtestwindow.py  keyboard.py  layermanip.py  layermodes.py  layerprops.glade  (+38 more)
src/gui/colors/: __init__.py  adjbases.py  bases.py  changers.py  combined.py  hcywheel.py  hsvcube.py  hsvsquare.py  hsvwheel.py  paletteview.py  sliders.py  uimisc.py  util.py
src/lib/: autosave.py  brush.py  brushes_migrate_json.py  cache.py  command.py  common.hpp  eotf.py  errors.py  fastpng.cpp  floodfill.py  gdkpixbuf2numpy.cpp  gdkpixbuf2numpy.hpp  gettext.py  gettext_setup.py  gibindings.py  glib.py  i18n.py  mapping.hpp  modes.py  naming.py  palette.py  pixbufsurface.py  python_brush.hpp  strokemap.py  tiledsurface.py  validation.py  xml.py
src/lib/fastapprox/: Makefile.am.local  fasthyperbolic.h  fastlog.h  fastonebigheader.h  fasttrig.h
src/lib/fill/: blur_swig.hpp  floodfill.cpp  gap_closing_fill.cpp  gap_detection.cpp
src/lib/layer/: core.py  group.py  rendering.py  test.py
src/palettes/: Gnome_Palette.gpl  Tango_Palette.gpl  Warm_Colors.gpl
src/platlib/: brush.hpp  brushsettings.hpp  colorchanger_crossed_bowl.hpp  colorring.hpp  meson.build  pixops.cpp  pythontiledsurface.cpp
src/platlib/fastapprox/: cast.h  fasterf.h  fastexp.h  fastgamma.h  fastpow.h
src/platlib/fill/: blur.hpp  fill_constants.cpp  fill_constants.hpp  morphology.hpp
src/po/: ar.po  ast.po  hr.po  ja.po  lt.po  pa.po  sk.po  sq.po  sr@latin.po  sv.po  update_languages.sh  uz.po  zh_HK.po
src/purelib/: alg.py  autosave.py  brushsettings.py  cache.py  document.py  feedback.py  fileutils.py  fill_common.py  floodfill.py  gettext.py  gettext_setup.py  glib.py  helpers.py  i18n.py  idletask.py  layervis.py  localecodes.py  meta.py  modes.py  naming.py  palette.py  pixbuf.py  pycompat.py  stroke.py  surface.py  xml.py
src/purelib/layer/: __init__.py  data.py  error.py
(+901 files in other folders)
